--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.github.heideltime</groupId>
 	<artifactId>heideltime</artifactId>
-	<version>2.2.1</version>
+	<version>2.2.1-SNAPSHOT</version>
 
 	<name>HeidelTime</name>
 	<description>HeidelTime is a multilingual cross-domain temporal tagger that extracts temporal expressions from documents and normalizes them according to the TIMEX3 annotation standard.</description>
@@ -24,6 +24,10 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		
+		<uimaj.version>2.10.3</uimaj.version>
+		<uimafit.version>2.5.0</uimafit.version>
+		<dkpro.version>1.12.1-SNAPSHOT</dkpro.version>
 	</properties>
 
 	<developers>
@@ -183,7 +187,7 @@
 		<dependency>
 			<groupId>org.apache.uima</groupId>
 			<artifactId>uimaj-core</artifactId>
-			<version>2.8.1</version>
+			<version>${uimaj.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- for the StanfordPOSTaggerWrapper -->
@@ -205,6 +209,27 @@
 			<artifactId>lbfgs</artifactId>
 			<version>0.1</version>
 			<scope>provided</scope>
+		</dependency>
+		
+		<!-- DKPro types -->
+		<dependency>
+			<groupId>org.dkpro.core</groupId>
+			<artifactId>dkpro-core-asl</artifactId>
+			<version>${dkpro.version}</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.dkpro.core</groupId>
+			<artifactId>dkpro-core-gpl</artifactId>
+			<version>${dkpro.version}</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.dkpro.core</groupId>
+			<artifactId>dkpro-core-api-segmentation-asl</artifactId>
+			<version>${dkpro.version}</version>
 		</dependency>
 	</dependencies>
 </project>
