--- a/heideltime-core/pom.xml
+++ b/heideltime-core/pom.xml
@@ -1,72 +1,98 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>com.github.heideltime</groupId>
-		<artifactId>heideltime</artifactId>
-		<version>2.2.1-SNAPSHOT</version>
-	</parent>
+    <parent>
+        <groupId>com.github.heideltime</groupId>
+        <artifactId>heideltime</artifactId>
+        <version>2.2.1-SNAPSHOT</version>
+    </parent>
 
-	<artifactId>heideltime-core</artifactId>
-	<packaging>jar</packaging>
+    <artifactId>heideltime-core</artifactId>
+    <packaging>jar</packaging>
 
-	<name>HeidelTime Core</name>
+    <name>HeidelTime Core</name>
 
-	<dependencies>
-		<dependency>
+    <dependencies>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>heideltime-types</artifactId>
             <version>${project.version}</version>
         </dependency>
 	
-		<!-- for practically every component -->
-		<dependency>
-			<groupId>org.apache.uima</groupId>
-			<artifactId>uimaj-core</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<!-- for the StanfordPOSTaggerWrapper -->
-		<dependency>
-			<groupId>edu.stanford.nlp</groupId>
-			<artifactId>stanford-corenlp</artifactId>
-			<version>3.3.1</version>
-			<scope>provided</scope>
-		</dependency>
-		<!-- these are for JVnTextPro -->
-		<dependency>
-			<groupId>args4j</groupId>
-			<artifactId>args4j</artifactId>
-			<version>2.32</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.dbtsai.lbfgs</groupId>
-			<artifactId>lbfgs</artifactId>
-			<version>0.1</version>
-			<scope>provided</scope>
-		</dependency>
+        <!-- for practically every component -->
+        <dependency>
+            <groupId>org.apache.uima</groupId>
+            <artifactId>uimaj-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        
+        <!-- for the StanfordPOSTaggerWrapper -->
+        <dependency>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-corenlp</artifactId>
+            <version>3.3.1</version>
+            <scope>provided</scope>
+        </dependency>
+        
+        <!-- these are for JVnTextPro -->
+        <dependency>
+            <groupId>args4j</groupId>
+            <artifactId>args4j</artifactId>
+            <version>2.32</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.dbtsai.lbfgs</groupId>
+            <artifactId>lbfgs</artifactId>
+            <version>0.1</version>
+            <scope>provided</scope>
+        </dependency>
 		
-		<!-- DKPro types -->
-		<dependency>
-			<groupId>org.dkpro.core</groupId>
-			<artifactId>dkpro-core-asl</artifactId>
-			<version>${dkpro.version}</version>
-			<type>pom</type>
-			<scope>import</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.dkpro.core</groupId>
-			<artifactId>dkpro-core-gpl</artifactId>
-			<version>${dkpro.version}</version>
-			<type>pom</type>
-			<scope>import</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.dkpro.core</groupId>
-			<artifactId>dkpro-core-api-segmentation-asl</artifactId>
-			<version>${dkpro.version}</version>
-		</dependency>
-	</dependencies>
+        <!-- DKPro types -->
+        <dependency>
+            <groupId>org.dkpro.core</groupId>
+            <artifactId>dkpro-core-asl</artifactId>
+            <version>${dkpro.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.dkpro.core</groupId>
+            <artifactId>dkpro-core-gpl</artifactId>
+            <version>${dkpro.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.dkpro.core</groupId>
+            <artifactId>dkpro-core-api-segmentation-asl</artifactId>
+            <version>${dkpro.version}</version>
+        </dependency>
+        
+        
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+		
+        <dependency>
+            <groupId>org.dkpro.core</groupId>
+            <artifactId>dkpro-core-io-xmi-asl</artifactId>
+            <version>${dkpro.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 	
 </project>
