--- a/heideltime-types/pom.xml
+++ b/heideltime-types/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.heideltime</groupId>
 		<artifactId>heideltime</artifactId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>3.0.0</version>
 	</parent>
 
 	<artifactId>heideltime-types</artifactId>
